--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,14 @@ footer .terms {
   font-family: Inconsolata;
   font-size: 70px;
   margin-left: 90px;
-  margin-top: 30px;
+  margin-top: 10px;
+}
+.hero .calloutContainer .description {
+  color: white;
+  font-family: Inconsolata;
+  font-size: 20px;
+  margin-left: 100px;
+  margin-top: 10px;
 }
 
 .gear-holder {
