--- a/scss/home.scss
+++ b/scss/home.scss
@@ -17,7 +17,14 @@
             font-family: Inconsolata;
             font-size: 70px;
             margin-left: 90px;
-            margin-top: 30px;
+            margin-top: 10px;
+        }
+        .description {
+            color: white;
+            font-family: Inconsolata;
+            font-size: 20px;
+            margin-left: 100px;
+            margin-top: 10px;
         }
     }
 }
